--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1 class="box">Recetas</h1>
     <p><a href="pages/page1.html">Galletas tipo Reinitas<img src="png/galletasreinita.jpeg"></a></p>
+    <p><a href="pages/page1.html">Galletas tipo Reinitas<img src="png/galletasreinita.jpeg"></a></p>
+    <p><a href="pages/page1.html">Galletas tipo Reinitas<img src="png/galletasreinita.jpeg"></a></p>
+    <p><a href="pages/page1.html">Galletas tipo Reinitas<img src="png/galletasreinita.jpeg"></a></p>
+    <p><a href="pages/page1.html">Galletas tipo Reinitas<img src="png/galletasreinita.jpeg"></a></p>
 </body>
 </html>
